add neighbor frequency and neighbor cell parameters for Neutrino 224.
